
      * asock.NewUnix() has a new argument, `p`, which is the Unix
        permissions to set on the socket.

      * Aclient constructors now take a single argument, a Config
        struct, as the Asock constructors do.

      * client.Config has a new `EOM` field, which behaves identically
        to the asock.Config field of the same name, described below.

  Additions and other changes

      * The asock.Config struct has a new field, `EOM`, which sets the
        end-of-message marker (defaults to "\n\n").

      * Network handling is now more correct and robust.

      * Test suite speedups (across 0.16 and 0.15)


0.15.0 - 2015-05-26
--------------------------------------------------------------------

  Breaking changes

      * The `Config` struct has two new fields:

          * Config.Buffer specifies the size of the buffer on the
            Asock.Msgr channel (defaults to 32).

          * Config.TLSConfig is the *tls.Config instance which is
            needed to set up a TLS connection.  This was formerly an
            argument of asock.NewTLS().

      * The `Timeout` field in the `Config` struct is now treated as
        milliseconds instead of seconds.

      * client constructors have a new argument, `timeout`, which sets
        the number of milliseconds before read/write operations
        timeout.

  Additions and other changes

      * client has a new method, Read()

      * A special-casing of Config.Timeout for test purposes has been
        removed from the production asock code.

      * Read buffer in asock and client now defaults to 128 bytes (up
        from 64).


0.14.1 - 2015-05-19
--------------------------------------------------------------------

    * Documentation improvements


0.14.0 - 2015-05-19
--------------------------------------------------------------------

    * TLS support added via the asock & client NewTLS() methods.


0.13.0 - 2015-05-16
--------------------------------------------------------------------
