@@ -15,6 +15,9 @@
       * client.Config has a new `EOM` field, which behaves identically
         to the asock.Config field of the same name, described below.
 
+      * The Msg generated by a.Quit being invoked (code 199) is now
+        sent regardless of Msglvl setting.
+
   Additions and other changes
 
       * The asock.Config struct has a new field, `EOM`, which sets the
